// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly for 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling  
    $2.50
  </h1>
</div>
`;

exports[`should render ExpenseSummary correctly for multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    10
     
    expenses
     totalling  
    $2,500.00
  </h1>
</div>
`;
